<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.ContactProfileActivity">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/_30dp"
            android:src="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:textColor="@drawable/edit_text_selector"
            android:textSize="33sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/smile_face"
            app:layout_constraintBottom_toBottomOf="@+id/etName"
            app:layout_constraintEnd_toStartOf="@+id/etName"
            app:layout_constraintTop_toTopOf="@+id/etName" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/edit"
            app:backgroundTint="#E700C3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="@dimen/_10dp"
            app:cardElevation="@dimen/_10dp"
            app:layout_constraintBottom_toTopOf="@+id/btnEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            app:layout_constraintVertical_bias="0.142">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/_20dp"
                        android:enabled="false"
                        android:inputType="phone"
                        android:text="@string/phone_number"
                        android:textColor="@drawable/edit_text_selector"
                        android:textSize="20sp"
                        app:drawableLeftCompat="@drawable/phone" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_30dp">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/_20dp"
                        android:enabled="false"
                        android:inputType="textEmailAddress"
                        android:text="@string/email"
                        android:textColor="@drawable/edit_text_selector"
                        android:textSize="20sp"
                        app:drawableLeftCompat="@drawable/mail"
                        tools:layout_editor_absoluteY="508dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_30dp">

                    <EditText
                        android:id="@+id/etNotes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/_20dp"
                        android:enabled="false"
                        android:text="@string/notes"
                        android:textColor="@drawable/edit_text_selector"
                        android:textSize="26sp"
                        app:drawableStartCompat="@drawable/notes"
                        tools:layout_editor_absoluteY="588dp" />

                </TableRow>

            </TableLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>